@@ -1,0 +1,8 @@
+##parameters = 
+
+# Returns the sections and workspaces and the workflow that should be 
+# used for types in each section/workspace.
+
+return {'workspaces': 'workspace_content_wf',
+        'sections': 'section_content_wf',
+       }
